# llama-index-trust-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/llama_index_trust_gate/: __init__.py  tool.py
tests/: test_tool.py
